Attempt to prevent overscroll on iphone

--- a/style.css
+++ b/style.css
@@ -152,6 +152,8 @@ a {
 
   display: flex;
   flex-direction: column;
+
+  -webkit-overflow-scrolling: touch;
 }
 
 .section h2 {
